@@ -40,6 +40,8 @@ import org.matsim.api.core.v01.population.Person;
 import org.matsim.contrib.otfvis.OTFVis;
 import org.matsim.core.api.experimental.events.EventsManager;
 import org.matsim.core.config.ConfigUtils;
+import org.matsim.core.config.groups.QSimConfigGroup.LinkDynamics;
+import org.matsim.core.config.groups.QSimConfigGroup.TrafficDynamics;
 import org.matsim.core.events.EventsUtils;
 import org.matsim.core.events.algorithms.EventWriterXML;
 import org.matsim.core.gbl.MatsimRandom;
@@ -71,17 +73,12 @@ public class GenerateFundamentalDiagramData {
 	static final Logger LOG = Logger.getLogger(GenerateFundamentalDiagramData.class);
 
 	private String runDir ;
-	private boolean isDumpingInputFiles = false; // includes config, network
+	private boolean isDumpingInputFiles = true; // includes config, network
 	private boolean isWritingEventsFileForEachIteration = false;
 	
-	static String[] TRAVELMODES;	
-	
-	static boolean PASSING_ALLOWED = false;
-	static boolean SEEPAGE_ALLOWED = false;
-	static boolean WITH_HOLES = false;
-	static String HOLE_SPEED = "15";
-
+	private String[] travelModes;	
 	private Double[] modalSplitInPCU;
+	
 	private boolean isUsingLiveOTFVis = false;
 	private boolean isPlottingDistribution = false;
 
@@ -95,12 +92,18 @@ public class GenerateFundamentalDiagramData {
 	private Scenario scenario;
 
 	static GlobalFlowDynamicsUpdator globalFlowDynamicsUpdator;
-	static PassingEventsUpdator passingEventsUpdator;
+	private PassingEventsUpdator passingEventsUpdator;
 	private Map<Id<VehicleType>, TravelModesFlowDynamicsUpdator> mode2FlowData;
+	private final Map<Id<Person>, String> person2Mode = new HashMap<Id<Person>, String>();
 
 	private Integer[] startingPoint;
 	private Integer [] maxAgentDistribution;
 	private Integer [] stepSize;
+	
+	
+	public GenerateFundamentalDiagramData (final InputsForFDTestSetUp inputs){
+		this.inputs = inputs;
+	}
 
 	public static void main(String[] args) {
 		
@@ -112,34 +115,30 @@ public class GenerateFundamentalDiagramData {
 			
 			args = new String [8];
 			
-			String my_dir = "../../../../repos/shared-svn/projects/mixedTraffic/triangularNetwork/run313/";
-			String outFolder ="/singleModes/holes/2lanes/carBike/";
+			String myDir = "../../../../repos/shared-svn/projects/mixedTraffic/triangularNetwork/run313/";
+			String outFolder ="/carBikeHolesPassing/";
 			
-			args[0] = my_dir + outFolder ;
+			args[0] = myDir + outFolder ;
 			args[1] = "car,bike"; // travel (main) modes
 			args[2] = "1.0,1.0"; // modal split in pcu
-			args[3] = "false"; // isPassingAllowed
-			args[4] = "false"; // isSeepageAllowed
-			args[5] = "true"; // isUsingHoles
-			args[6] = "1"; // reduce number of data points by this factor
-			args[7] = "false"; // is plotting modal split distribution
+			args[3] = TrafficDynamics.withHoles.toString(); // isUsingHoles
+			args[4] = LinkDynamics.PassingQ.toString(); // isPassingAllowed
+			args[5] = "5"; // reduce number of data points by this factor
+			args[6] = "false"; // is plotting modal split distribution
 		}
 		
-		GenerateFundamentalDiagramData generateFDData = new GenerateFundamentalDiagramData();
+		InputsForFDTestSetUp inputs = new InputsForFDTestSetUp();
+		inputs.setTravelModes(args[1].split(","));
+		inputs.setModalSplit(args[2].split(",")); //in pcu
+		inputs.setTrafficDynamics(TrafficDynamics.valueOf( args[3]));
+		inputs.setLinkDynamics(LinkDynamics.valueOf( args[4]));
 		
+		GenerateFundamentalDiagramData generateFDData = new GenerateFundamentalDiagramData(inputs);
 		generateFDData.setRunDirectory(args[0]);
-		generateFDData.setTravelModes(args[1].split(","));
-		generateFDData.setModalSplit(args[2].split(",")); //in pcu
-		generateFDData.setIsPassingAllowed(Boolean.valueOf(args[3]));
-		generateFDData.setIsSeepageAllowed(Boolean.valueOf(args[4]));
-		generateFDData.setIsUsingHoles(Boolean.valueOf(args[5])); 
-		generateFDData.setReduceDataPointsByFactor(Integer.valueOf(args[6]));
-		generateFDData.setIsPlottingDistribution(Boolean.valueOf(args[7]));
-		
-		generateFDData.setIsDumpingInputFiles(true);
+		generateFDData.setReduceDataPointsByFactor(Integer.valueOf(args[5]));
+		generateFDData.setIsPlottingDistribution(Boolean.valueOf(args[6]));
 		generateFDData.setIsUsingLiveOTFVis(false);
 		generateFDData.setIsWritingEventsFileForEachIteration(true);
-		
 		generateFDData.run();
 	}
 
@@ -147,14 +146,6 @@ public class GenerateFundamentalDiagramData {
 		if(isDumpingInputFiles) {
 			createLogFile();
 		}
-
-		if (TRAVELMODES.length != modalSplitInPCU.length){
-			throw new RuntimeException("Modal split for each travel mode is necessray parameter, it is not defined correctly. Check your static variable!!! \n Aborting ...");
-		}
-
-		if(PASSING_ALLOWED) LOG.info("=======Passing is allowed.========");
-		if(SEEPAGE_ALLOWED) LOG.info("=======Seepage is allowed.========");
-		if(WITH_HOLES) LOG.info("======= Using double ended queue.=======");
 
 		if(isDumpingInputFiles && runDir==null) throw new RuntimeException("Config, nework and plan file can not be written without a directory location.");
 		if(runDir==null) throw new RuntimeException("Location to write data for FD is not set. Aborting...");
@@ -167,22 +158,20 @@ public class GenerateFundamentalDiagramData {
 		}
 		
 		if(isWritingEventsFileForEachIteration) Log.warn("This will write one event file corresponding to each iteration and thus ");
-
-		flowUnstableWarnCount = new int [TRAVELMODES.length];
-		speedUnstableWarnCount = new int [TRAVELMODES.length];
 	}
 
 	public void run(){
-
 		consistencyCheckAndInitialize();
-
-		inputs = new InputsForFDTestSetUp();
 		inputs.run();
+		travelModes = inputs.getTravelModes();
+		modalSplitInPCU = inputs.getModalSplit();
 		if(isDumpingInputFiles) inputs.dumpInputFiles(runDir);
 		
 		scenario = inputs.getScenario();
 
 		mode2FlowData = inputs.getTravelMode2FlowDynamicsData();
+		flowUnstableWarnCount = new int [travelModes.length];
+		speedUnstableWarnCount = new int [travelModes.length];
 
 		openFileAndWriteHeader(runDir+"/data.txt");
 
@@ -196,36 +185,9 @@ public class GenerateFundamentalDiagramData {
 	public void setRunDirectory(String runDir) {
 		this.runDir = runDir;
 	}
-
-	public void setIsPassingAllowed(boolean isPassingAllowed) {
-		PASSING_ALLOWED = isPassingAllowed;
-	}
-
-	public void setIsSeepageAllowed(boolean isSeepageAllowed) {
-		SEEPAGE_ALLOWED = isSeepageAllowed;
-	}
-
-	public void setIsDumpingInputFiles(boolean writeInputFiles) {
-		isDumpingInputFiles = writeInputFiles;
-	}
-
-	public void setTravelModes(String[] travelModes) {
-		TRAVELMODES = travelModes;
-	}
-
-	public void setModalSplit(String [] modalSplit) {
-		this.modalSplitInPCU = new Double [modalSplit.length];
-		for (int ii = 0; ii <modalSplit.length; ii ++){
-			this.modalSplitInPCU [ii] = Double.valueOf(modalSplit[ii]);
-		}
-	}
-
+	
 	public void setReduceDataPointsByFactor(int reduceDataPointsByFactor) {
 		this.reduceDataPointsByFactor = reduceDataPointsByFactor;
-	}
-
-	public void setIsUsingHoles(boolean isUsingHole) {
-		WITH_HOLES = isUsingHole;
 	}
 
 	public void setIsPlottingDistribution(boolean isPlottingDistribution) {
@@ -240,35 +202,39 @@ public class GenerateFundamentalDiagramData {
 			boolean isWritingEventsFileForEachIteration) {
 		this.isWritingEventsFileForEachIteration = isWritingEventsFileForEachIteration;
 	}
-
+	
+	public void setIsDumpingInputFiles(boolean isDumpingInputFiles){
+		this.isDumpingInputFiles = isDumpingInputFiles;
+	}
+	
 	private void parametricRunAccordingToGivenModalSplit(){
 
 		//	Creating minimal configuration respecting modal split in PCU and integer agent numbers
 		List<Double> pcus = new ArrayList<Double>();
-		for(int index =0 ;index<TRAVELMODES.length;index++){
-			double tempPCU = MixedTrafficVehiclesUtils.getPCU(TRAVELMODES[index]);
+		for(int index =0 ;index<travelModes.length;index++){
+			double tempPCU = MixedTrafficVehiclesUtils.getPCU(travelModes[index]);
 			pcus.add(tempPCU);
 		}
 
 		List<Integer> minSteps = new ArrayList<Integer>();
 		for (double modalSplit : Arrays.asList(modalSplitInPCU)){
-			minSteps.add(new Integer((int) (modalSplit*100)));
+			minSteps.add(Integer.valueOf( (int) modalSplit*100) ) ;
 		}
 
 		int commonMultiplier = 1;
-		for (int i=0; i<TRAVELMODES.length; i++){
+		for (int i=0; i<travelModes.length; i++){
 			double pcu = pcus.get(i);
 			//heavy vehicles
-			if ((pcu>1) && ((minSteps.get(i))%pcu != 0)){
+			if ( (pcu>1) && (minSteps.get(i)%pcu != 0) ){
 				double lcm = getLCM((int) pcu, minSteps.get(i));
 				commonMultiplier *= lcm/minSteps.get(i);
 			}
 		}
-		for (int i=0; i<TRAVELMODES.length; i++){
+		for (int i=0; i<travelModes.length; i++){
 			minSteps.set(i, (int) (minSteps.get(i)*commonMultiplier/pcus.get(i)));
 		}
 		int pgcd = getGCDOfList(minSteps);
-		for (int i=0; i<TRAVELMODES.length; i++){
+		for (int i=0; i<travelModes.length; i++){
 			minSteps.set(i, minSteps.get(i)/pgcd);
 		}
 
@@ -287,15 +253,15 @@ public class GenerateFundamentalDiagramData {
 		double networkDensity = (InputsForFDTestSetUp.LINK_LENGTH/cellSizePerPCU) * 3 * InputsForFDTestSetUp.NO_OF_LANES;
 		double sumOfPCUInEachStep = 0;
 	
-		for(int index=0;index<TRAVELMODES.length;index++){
-			sumOfPCUInEachStep +=  minSteps.get(index) * MixedTrafficVehiclesUtils.getPCU(TRAVELMODES[index]);
+		for(int index=0;index<travelModes.length;index++){
+			sumOfPCUInEachStep +=  minSteps.get(index) * MixedTrafficVehiclesUtils.getPCU(travelModes[index]);
 		}
 		int numberOfPoints = (int) Math.ceil(networkDensity/sumOfPCUInEachStep) +5;
 
 		List<List<Integer>> pointsToRun = new ArrayList<List<Integer>>();
 		for (int m=1; m<numberOfPoints; m++){
 			List<Integer> pointToRun = new ArrayList<Integer>();
-			for (int i=0; i<GenerateFundamentalDiagramData.TRAVELMODES.length; i++){
+			for (int i=0; i<travelModes.length; i++){
 				pointToRun.add(minSteps.get(i)*m);
 			}
 			LOG.info("Number of Agents - \t"+pointToRun);
@@ -314,21 +280,21 @@ public class GenerateFundamentalDiagramData {
 
 	private void parametricRunAccordingToDistribution(){
 
-		this.startingPoint = new Integer [TRAVELMODES.length];
-		this.stepSize = new Integer [TRAVELMODES.length];
+		this.startingPoint = new Integer [travelModes.length];
+		this.stepSize = new Integer [travelModes.length];
 
-		for(int ii=0;ii<TRAVELMODES.length;ii++){
+		for(int ii=0;ii<travelModes.length;ii++){
 			this.startingPoint [ii] =0;
 			this.stepSize [ii] = this.reduceDataPointsByFactor*1;
 		}
 		this.startingPoint = new Integer[] {1,1};
 
-		maxAgentDistribution = new Integer [TRAVELMODES.length];
+		maxAgentDistribution = new Integer [travelModes.length];
 		double cellSizePerPCU = ((NetworkImpl) this.scenario.getNetwork()).getEffectiveCellSize();
 		double networkDensity = (InputsForFDTestSetUp.LINK_LENGTH/cellSizePerPCU) * 3 * InputsForFDTestSetUp.NO_OF_LANES;
 
 		for(int ii=0;ii<maxAgentDistribution.length;ii++){
-			double pcu = this.mode2FlowData.get(Id.create(TRAVELMODES[ii],VehicleType.class)).getVehicleType().getPcuEquivalents();
+			double pcu = this.mode2FlowData.get(Id.create(travelModes[ii],VehicleType.class)).getVehicleType().getPcuEquivalents();
 			int maxNumberOfVehicle = (int) Math.floor(networkDensity/pcu)+1;
 			maxAgentDistribution[ii] = maxNumberOfVehicle;
 		}
@@ -338,13 +304,13 @@ public class GenerateFundamentalDiagramData {
 		for ( int i=0; i<pointsToRun.size(); i++){
 			List<Integer> pointToRun = pointsToRun.get(i);
 			double density =0;
-			for(int jj = 0; jj < TRAVELMODES.length;jj++ ){
-				double pcu = this.mode2FlowData.get(Id.create(TRAVELMODES[jj],VehicleType.class)).getVehicleType().getPcuEquivalents();
+			for(int jj = 0; jj < travelModes.length;jj++ ){
+				double pcu = this.mode2FlowData.get(Id.create(travelModes[jj],VehicleType.class)).getVehicleType().getPcuEquivalents();
 				density += pcu *pointToRun.get(jj) ;
 			}
 
 			if(density <= networkDensity+5){
-				System.out.println("Going into run "+pointToRun);
+				LOG.info("Going into run "+pointToRun);
 				this.singleRun(pointToRun);
 			} 
 		}
@@ -354,7 +320,7 @@ public class GenerateFundamentalDiagramData {
 
 		int numberOfPoints = 1; 
 
-		for(int jj=0;jj<TRAVELMODES.length;jj++){
+		for(int jj=0;jj<travelModes.length;jj++){
 			numberOfPoints *= (int) Math.floor((maxAgentDistribution[jj]-startingPoint[jj])/stepSize[jj])+1;
 		}
 
@@ -367,10 +333,10 @@ public class GenerateFundamentalDiagramData {
 		for (int i=0; i<numberOfPoints; i++){
 			Integer[] newPoint = new Integer[maxAgentDistribution.length];
 			for (int j=0; j<newPoint.length; j++){
-				newPoint[j] = (iterationModule.getPoint())[j];
+				newPoint[j] = iterationModule.getPoint()[j];
 			}
 			pointsToRun.add(Arrays.asList(newPoint));
-			String point = Arraytostring(iterationModule.getPoint());
+			String point = arraytostring(iterationModule.getPoint());
 			LOG.info("Just added point "+point+" to the collection.");
 			if (i<numberOfPoints-1){
 				iterationModule.add1();
@@ -380,16 +346,14 @@ public class GenerateFundamentalDiagramData {
 	}
 
 	private void singleRun(List<Integer> pointToRun) {
-		
 		person2Mode.clear();
-		
-		for (int i=0; i<TRAVELMODES.length; i++){
+		for (int i=0; i<travelModes.length; i++){
 			for (int ii = 0; ii < pointToRun.get(i); ii++){
 				Id<Person> personId = Id.createPersonId(person2Mode.size());
-				person2Mode.put(personId,TRAVELMODES[i]);
+				person2Mode.put(personId,travelModes[i]);
 			}
 			
-			this.mode2FlowData.get(Id.create(TRAVELMODES[i],VehicleType.class)).setnumberOfAgents(pointToRun.get(i).intValue());
+			this.mode2FlowData.get(Id.create(travelModes[i],VehicleType.class)).setnumberOfAgents(pointToRun.get(i).intValue());
 		}
 
 		EventsManager events = EventsUtils.createEventsManager();
@@ -399,7 +363,7 @@ public class GenerateFundamentalDiagramData {
 
 		events.addHandler(globalFlowDynamicsUpdator);
 		
-		if(TRAVELMODES.length > 1)	events.addHandler(passingEventsUpdator);
+		if(travelModes.length > 1)	events.addHandler(passingEventsUpdator);
 
 		EventWriterXML eventWriter = null;
 		
@@ -417,8 +381,8 @@ public class GenerateFundamentalDiagramData {
 		qSim.run();
 
 		boolean stableState = true;
-		for(int index=0;index<TRAVELMODES.length;index++){
-			Id<VehicleType> veh = Id.create(TRAVELMODES[index], VehicleType.class);
+		for(int index=0;index<travelModes.length;index++){
+			Id<VehicleType> veh = Id.create(travelModes[index], VehicleType.class);
 			if(!mode2FlowData.get(veh).isFlowStable()) 
 			{
 				stableState = false;
@@ -452,30 +416,29 @@ public class GenerateFundamentalDiagramData {
 
 		if( stableState ) {
 			writer.format("%d\t",globalFlowDynamicsUpdator.getGlobalData().numberOfAgents);
-			for (int i=0; i < TRAVELMODES.length; i++){
-				writer.format("%d\t", this.mode2FlowData.get(Id.create(TRAVELMODES[i],VehicleType.class)).numberOfAgents);
+			for (int i=0; i < travelModes.length; i++){
+				writer.format("%d\t", this.mode2FlowData.get(Id.create(travelModes[i],VehicleType.class)).numberOfAgents);
 			}
 			writer.format("%.2f\t", globalFlowDynamicsUpdator.getGlobalData().getPermanentDensity());
-			for (int i=0; i < TRAVELMODES.length; i++){
-				writer.format("%.2f\t", this.mode2FlowData.get(Id.create(TRAVELMODES[i],VehicleType.class)).getPermanentDensity());
+			for (int i=0; i < travelModes.length; i++){
+				writer.format("%.2f\t", this.mode2FlowData.get(Id.create(travelModes[i],VehicleType.class)).getPermanentDensity());
 			}
 			writer.format("%.2f\t", globalFlowDynamicsUpdator.getGlobalData().getPermanentFlow());
-			for (int i=0; i < TRAVELMODES.length; i++){
-				writer.format("%.2f\t", this.mode2FlowData.get(Id.create(TRAVELMODES[i],VehicleType.class)).getPermanentFlow());
+			for (int i=0; i < travelModes.length; i++){
+				writer.format("%.2f\t", this.mode2FlowData.get(Id.create(travelModes[i],VehicleType.class)).getPermanentFlow());
 			}
 			writer.format("%.2f\t", globalFlowDynamicsUpdator.getGlobalData().getPermanentAverageVelocity());
-			for (int i=0; i < TRAVELMODES.length; i++){
-				writer.format("%.2f\t", this.mode2FlowData.get(Id.create(TRAVELMODES[i],VehicleType.class)).getPermanentAverageVelocity());
+			for (int i=0; i < travelModes.length; i++){
+				writer.format("%.2f\t", this.mode2FlowData.get(Id.create(travelModes[i],VehicleType.class)).getPermanentAverageVelocity());
 			}
 			
-			if( TRAVELMODES.length > 1 ) {
+			if( travelModes.length > 1 ) {
 
 				writer.format("%.2f\t", passingEventsUpdator.getNoOfCarsPerKm());
 
 				writer.format("%.2f\t", passingEventsUpdator.getTotalBikesPassedByAllCarsPerKm());
 
 				writer.format("%.2f\t", passingEventsUpdator.getAvgBikesPassingRate());
-
 			}
 			
 			writer.print("\n");
@@ -484,8 +447,6 @@ public class GenerateFundamentalDiagramData {
 		if(isWritingEventsFileForEachIteration) eventWriter.closeFile();
 	}
 	
-	static final Map<Id<Person>, String> person2Mode = new HashMap<Id<Person>, String>();
-
 	private Netsim createModifiedQSim(Scenario sc, EventsManager events) {
 		final QSim qSim = new QSim(sc, events);
 		ActivityEngine activityEngine = new ActivityEngine(events, qSim.getAgentCounter());
@@ -554,31 +515,31 @@ public class GenerateFundamentalDiagramData {
 			throw new RuntimeException(e);
 		}
 		writer.print("n \t");
-		for (int i=0; i < TRAVELMODES.length; i++){
-			String str = this.mode2FlowData.get(Id.create(TRAVELMODES[i],VehicleType.class)).getModeId().toString();
+		for (int i=0; i < travelModes.length; i++){
+			String str = this.mode2FlowData.get(Id.create(travelModes[i],VehicleType.class)).getModeId().toString();
 			String strn = "n_"+str;
 			writer.print(strn+"\t");
 		}
 		writer.print("k \t");
-		for (int i=0; i < TRAVELMODES.length; i++){
-			String str = this.mode2FlowData.get(Id.create(TRAVELMODES[i],VehicleType.class)).getModeId().toString();
+		for (int i=0; i < travelModes.length; i++){
+			String str = this.mode2FlowData.get(Id.create(travelModes[i],VehicleType.class)).getModeId().toString();
 			String strk = "k_"+str;
 			writer.print(strk+"\t");
 		}
 		writer.print("q \t");
-		for (int i=0; i < TRAVELMODES.length; i++){
-			String str = this.mode2FlowData.get(Id.create(TRAVELMODES[i],VehicleType.class)).getModeId().toString();
+		for (int i=0; i < travelModes.length; i++){
+			String str = this.mode2FlowData.get(Id.create(travelModes[i],VehicleType.class)).getModeId().toString();
 			String strq = "q_"+str;
 			writer.print(strq+"\t");
 		}
 		writer.print("v \t");
-		for (int i=0; i < TRAVELMODES.length; i++){
-			String str = this.mode2FlowData.get(Id.create(TRAVELMODES[i],VehicleType.class)).getModeId().toString();
+		for (int i=0; i < travelModes.length; i++){
+			String str = this.mode2FlowData.get(Id.create(travelModes[i],VehicleType.class)).getModeId().toString();
 			String strv = "v_"+str;
 			writer.print(strv+"\t");
 		}
 		
-		if( TRAVELMODES.length > 1 ) {
+		if( travelModes.length > 1 ) {
 			writer.print("noOfCarsPerkm \t");
 
 			writer.print("totalBikesPassedByAllCarsPerKm \t");
@@ -593,7 +554,7 @@ public class GenerateFundamentalDiagramData {
 		writer.close();
 	}
 
-	private static String Arraytostring(Integer[] list){
+	private static String arraytostring(Integer[] list){
 		int n = list.length;
 		String str = "";
 		for (int i=0; i<n; i++){
@@ -646,13 +607,6 @@ public class GenerateFundamentalDiagramData {
 		private static final Id<Link> ORIGIN_LINK_ID = Id.createLinkId("home");
 		private static final Id<Link> DESTINATION_LINK_ID = Id.createLinkId("work");
 
-		public MySimplifiedRoundAndRoundAgent(Id<Person> agentId, double actEndTime, String travelMode) {
-			personId = agentId;
-			mode = travelMode;
-			this.actEndTime = actEndTime;
-			this.plannedVehicleId = Id.create(agentId, Vehicle.class);
-		}
-
 		private final Id<Person> personId;
 		private final Id<Vehicle> plannedVehicleId;
 		private final String mode;
@@ -660,6 +614,13 @@ public class GenerateFundamentalDiagramData {
 
 		private MobsimVehicle vehicle ;
 		public boolean isArriving= false;
+		
+		public MySimplifiedRoundAndRoundAgent(Id<Person> agentId, double actEndTime, String travelMode) {
+			personId = agentId;
+			mode = travelMode;
+			this.actEndTime = actEndTime;
+			this.plannedVehicleId = Id.create(agentId, Vehicle.class);
+		}
 
 		private Id<Link> currentLinkId = ORIGIN_LINK_ID;
 		private State agentState= MobsimAgent.State.ACTIVITY;;
